--- a/styl.css
+++ b/styl.css
@@ -1,5 +1,5 @@
 body {
-	font-family:Geneva,Arial,Helvetica,sans-serif;
+	font-family: Geneva,Arial,Helvetica,sans-serif;
 	margin: 0px auto;
 	max-width:900px;
 	border: 1px solid #696;
@@ -67,4 +67,41 @@ h4 {
 	top: 50px;
 	left: -120px;
 	text-align:center;
+}
+
+h5 {
+	color: #a8a730;
+	background-color: #a00505;
+	-webkit-box-shadow: 2px 2px 20px #888;
+	-webkit-transform: rotate(45deg);
+	-moz-box-shadow: 2px 2px 20px #888;
+	-moz-transform: rotate(45deg);
+	position: absolute;
+	padding: 0px 150px;
+	top: -30px;
+	right: -200px;
+	text-align:center;
+}
+
+h6 {
+	font-size: 18px;
+	margin: 0px;
+	text-align:center;
+	color: #cdcc51;
+}
+
+tro {
+	font-size: 20px;
+	margin: 0px;
+	text-align:center;
+	color: #99CC33;
+}
+
+table {
+	BORDER-RIGHT: #ff9933 1px outset;
+    PADDING-RIGHT: 4px; BORDER-TOP: #ff9933 1px outset;
+    PADDING-LEFT: 4px; PADDING-BOTTOM: 1px;
+    BORDER-LEFT: #ff9933 1px outset; PADDING-TOP: 1px;
+    BORDER-BOTTOM: #ff9933 1px outset;
+    BACKGROUND-COLOR: #ffcc66;
 }
