--- a/styl.css
+++ b/styl.css
@@ -93,7 +93,8 @@ h6 {
 }
 
 tro {
-	font-size: 20px;
+	font-family: 'Oswald', sans-serif;
+	font-size: 25px;
 	margin: 0px;
 	text-align:center;
 	color: #99CC33;
