--- a/styl.css
+++ b/styl.css
@@ -214,3 +214,18 @@ a {
 a:hover {
 	text-decoration: underline;
 }
+
+td {
+	border-style: solid;
+	border-width: 1px;
+	font-size: 300%;
+}
+
+td:hover {
+	background-color: cyan;
+}
+
+#hoverResult {
+	color: green;
+	font-size: 200%
+}
