--- a/styl.css
+++ b/styl.css
@@ -3,46 +3,11 @@ body {
 	font-family: 'Titillium Web', sans-serif;
 	margin: 0px auto;
 	max-width:900px;
-	border: solid;
-	border-color:#eeff41;
-
-	
-	
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	-webkit-box-shadow: #fff17c 10px 10px 80px;
-	-moz-box-shadow: #fff17c 10px 10px 80px;
-	-ms-box-shadow: #fff17c 10px 10px 80px;
-	o-box-shadow: #fff17c 10px 10px 80px;
-	box-shadow: #fff17c 10px 10px 80px;
-
-	background: -webkit-gradient(linear, 0 0, 0 bottom, from(#00acc1), to(#0097a7));
-	background: -webkit-linear-gradient(#00acc1, #0097a7);
-	background: -moz-linear-gradient(#00acc1, #0097a7);
-	background: -ms-linear-gradient(#00acc1, #0097a7);
-	background: o-linear-gradient(#00acc1, #0097a7);
-	background: linear-gradient(#00acc1, #0097a7);
+	background: #00e5ff;
 }
 
 header {
-	background: -webkit-gradient(linear, 0 0, 0 bottom, from(#0051c0), to(#0045a3));
-	background: -webkit-linear-gradient(#0051c0, #0045a3);
-	background: -moz-linear-gradient(#0051c0, #0045a3);
-	background: -ms-linear-gradient(#0051c0, #0045a3);
-	background: o-linear-gradient(#0051c0, #0045a3);
-	background: linear-gradient(#0051c0, #0045a3);
-
-	-webkit-box-shadow: #fff17c 10px 0px 80px;
-	-moz-box-shadow: #fff17c 10px 0px 80px;
-	-ms-box-shadow: #fff17c 10px 0px 80px;
-	o-box-shadow: #fff17c 10px 0px 80px;
-	box-shadow: #fff17c 10px 0px 80px;
-
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-
+	background: #00e5ff;
 	display: block;
 	color: #dc13a1;
 	text-align: center;
@@ -76,7 +41,7 @@ h3 {
 
 lCorner {
 	color: #a8a730;
-	background-color: #004eb8;
+	background-color: #00e5ff;
 	-webkit-box-shadow: 2px 2px 20px #888;
 	-webkit-transform: rotate(-45deg);
 	-moz-box-shadow: 2px 2px 20px #888;
@@ -90,7 +55,7 @@ lCorner {
 
 rCorner {
 	color: #a8a730;
-	background-color: #004eb8;
+	background-color: #00e5ff;
 	-webkit-box-shadow: 2px 2px 20px #888;
 	-webkit-transform: rotate(45deg);
 	-moz-box-shadow: 2px 2px 20px #888;
